compiler/environment_tests/semantic_errors/004_n_functionOverload.sht
#~ SHOULDFAIL: Function overload ~#

func int f1 (int x, int y):
    return x

func float f1 (float x, float y):
    return x